client/src/pages/Landing/Landing.css
a,
a:focus,
a:hover {
  color: #fff;
  transition: 0.2s;
  -moz-transition: 0.2s;
  -webkit-transition: 0.2s;
  -o-transition: 0.2s;
}

a:focus,
a:hover {
  opacity: .7;
  text-decoration: none;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #fff;
  text-shadow: none;
  background-color: transparent;
  border: 1px solid #fff;
  border-radius: 2px;
}

.btn {
  color: #fff;
}

/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: #000;
}
body {
  font-family: Roboto, sans-serif;
  color: #fff;
  text-align: center;
  text-shadow: 0 1px 3px rgba(0,0,0,.5);
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  display: table;
  width: 100%;
  height: 100%;
  min-height: 100%;
}
.site-wrapper-inner {
  display: table-cell;
  vertical-align: top;
  position: relative;
  width: 100vw;
}

.startButton {
  padding-top: 135px;
}

.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/* Padding for spacing */
.inner {
  padding: 55px;
}

/*
 * Header
 */

.masthead-brand > li {
  display: inline-block;
}

.masthead-brand > li + li {
  margin-left: 20px;
}

.masthead-brand > li > a {
  padding-right: 0;
  padding-left: 0;
  font-size: 28px;
  font-weight: bold;
  color: #fff;
}

.masthead-brand > li > a:hover,
.masthead-brand > li > a:focus {
  background-color: transparent;
  color:#fff;
}

.masthead a {
  text-decoration: none;
}

.masthead {
    width: 100%;
}

/* VIDEO BACKGROUND 

.video-background {
  z-index:550;
  text-align:center;
  height:100%;
  min-height:100%;
  position:relative;
  overflow:hidden
}

.video-background .video-background-container {
  width:830px;
  max-width:100%;
  display:inline-block;
  position:absolute;
  top:50%;
  left:50%;
  -webkit-transform:translate(-50%,-50%);
  -moz-transform:translate(-50%,-50%);
  -ms-transform:translate(-50%,-50%);
  -o-transform:translate(-50%,-50%);
  transform:translate(-50%,-50%)
}

.video-background-title {
  font-size:78px;
  color:#fff;
  font-weight:300;
  text-transform:uppercase;
  text-align:center;
  margin-bottom:22px;
  padding-top:20px;
  display:inline-block;
  background-attachment:scroll;
  background-repeat:repeat-x;
  background-position:top center
}

.video-background-default-image {
  background:url(img/cover.jpg);
  background-repeat:no-repeat;
  background-position:center center;
  background-size:cover;
  width:100%;
  height:100%;
  z-index:0;
  backface-visibility:hidden
}

*/

.video-js {
    background-color: #fff;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
}
  
.video-container > video {
    display: inline-block;
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform:translate(-50%,-50%);
    -moz-transform:translate(-50%,-50%);
    -ms-transform:translate(-50%,-50%);
    -o-transform:translate(-50%,-50%);
    transform:translate(-50%,-50%);
    z-index: 1;
}

/*
 * Cover
 */
.cover {
  padding: 0 20px;
}
.cover .btn-lg {
  padding: 15px 50px;
  font-weight: bold;
}

.cover-heading {
  font-family: "Great Vibes", serif;
  color: #ffc61b;
  font-size: 60px;
  transform: rotate(-6deg);
  -ms-transform: rotate(-6deg);
  -moz-transform: rotate(-6deg);
  -webkit-transform: rotate(-6deg);
  -o-transform: rotate(-6deg);
}

small {
    color:#ccc!important;
}

img

/* Footer */

.mastfoot {
  color: #999; /* IE8 proofing */
  color: rgba(255,255,255,.5);
}

@media (min-width: 768px) {
  .masthead {
    position: fixed;
    top: 0;
  }
  .mastfoot {
    position: fixed;
    bottom: 0;
  }
  .site-wrapper-inner {
    vertical-align: middle;
    padding-top: 280px;
  }
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%;
  }

  .cover-heading {
    font-size: 100px;
  }
}

@media (min-width: 992px) {
  .mastfoot,
  .cover-container {
    max-width: 800px;
  }
  .masthead {
    max-width: 100%;
  }
}

